fix: ensure overflow is hidden for spoiler-blurred class

--- a/common/common.scss
+++ b/common/common.scss
@@ -1,4 +1,5 @@
 .spoiler-blurred {
+  overflow: hidden;
   filter: blur(48px) !important;
 
   .discourse-no-touch & {
